resolved ADA contrast issue with slide selectors

--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -67,7 +67,14 @@
 
     li {
       width: inherit;
-      &.selected a { box-shadow: inset 0 2px 0 #006181; }
+      a {
+        color: $black;
+      }
+      &.selected a {
+        margin: 0 10px;
+        box-shadow: inset 0 2px 0 $red;
+        color: $red;
+      }
     }
 
     @include media($medium-screen) {
